--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "i": "^0.3.5",
     "npm": "^4.0.3",
     "react": "^15.4.1",
+    "react-component-bytesize-icons": "^2.0.0",
     "react-dom": "^15.4.1",
+    "react-icons": "^2.2.1",
     "react-loading-bar": "0.0.3",
     "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.1.0",
